# anamnesis

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PILOT_CHECKLIST.md  concepts.md  contributing.md  faq.md  getting-started.md  session-sync-explained.md  team-usage.md
eval/: README.md  checkpoints.py  optimize.py  program.md  run_eval.py
eval/sessions/: s1_setup.md  s2_feature.md  s3_debug.md  s4_reuse.md  s5_retrieval.md
examples/full/: README.md
examples/minimal/.claude/memory/: INDEX.md
examples/minimal/.claude/rules/: memory-rule.md
skeleton/memory/: INDEX.md
skeleton/memory/archive/: README.md
skeleton/rules/: memory-rule.md
skeleton/skills/anamnesis/: SKILL.md
skeleton/skills/friday/: SKILL.md
skeleton/skills/friday/assets/: anamnesis.conf.example.yaml  claude-memory.conf.example.yaml
skeleton/skills/friday/references/: task-tracking.md
src/anamnesis/: cli.py  compact.py  config.py  conflict.py  decay.py  extract.py  installer.py  ledger.py  sync.py
src/claude_memory/: __init__.py  cli.py  config.py  installer.py  platform.py  project.py
tests/: conftest.py  test_cli.py  test_compact.py  test_config.py  test_conflict.py  test_decay.py  test_extract.py  test_fresh_install.sh  test_index_consistency.py  test_installer.py  test_integration.py  test_ledger.py  test_platform.py  test_sync.py  test_truncation_guards.py
tests/fixtures/: sample_config.yaml
tests/fixtures/sample_memory/: INDEX.md
(+26 files in other folders)
